--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,7 +120,12 @@
         <activity
             android:name=".view.SelectOrderProdActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".view.sorting.SortingReqActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.sorting.AddSortingReqActivity"
+            android:screenOrientation="portrait" />
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
